Primeiro commit do site

--- a/apresentacao.html
+++ b/apresentacao.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apresentação | Nuno Mimoso</title>
-    <link rel="stylesheet" href="../style.css">
-    <script src="../script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <style>
         main {
             min-height: 100vh;
@@ -70,9 +70,9 @@
                 </ul>
                 <div class="idiomas">
                     <select id="lang-switcher" onchange="mudarIdioma(this.value)">
-                        <option value="../pt/apresentacao.html" selected>PT</option>
-                        <option value="../en/apresentacao.html">EN</option>
-                        <option value="../de/apresentacao.html">DE</option>
+                        <option value="apresentacao.html" selected>PT</option>
+                        <option value="apresentacao.html">EN</option>
+                        <option value="apresentacao.html">DE</option>
                     </select>
                 </div>
             </div>
@@ -83,13 +83,13 @@
     <main>
         <!-- Coluna da foto -->
         <div class="col-esquerda">
-            <img src="../img/foto.jpg" alt="Foto de apresentação">
+            <img src="img/foto.jpg" alt="Foto de apresentação">
         </div>
 
         <!-- Coluna do texto -->
         <div class="col-direita">
             <h1>Título</h1>
-            <h2>Subtítulo </h2>
+            <h2>Subtítulo</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                 Sed posuere, massa ac facilisis interdum, eros libero euismod metus, sed sodales risus urna nec justo.
