--- a/contactos.html
+++ b/contactos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactos | Nuno Mimoso</title>
-    <link rel="stylesheet" href="../style.css">
-    <script src="../script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <style>
         main {
             min-height: 100vh;
@@ -72,23 +72,27 @@
             background: #b8922f;
         }
 
-        /* Ícones sociais */
+        /* Links sociais em texto */
         .social-links {
             display: flex;
             justify-content: center;
-            gap: 30px;
+            gap: 40px;
             margin-top: 40px;
+            font-weight: bold;
         }
 
-        .social-links a img {
-            width: 40px;
-            height: 40px;
-            transition: transform 0.2s;
+        .social-links a {
+            color: #002147;
+            text-decoration: none;
+            font-size: 1.1rem;
+            transition: color 0.3s, transform 0.2s;
         }
 
-        .social-links a img:hover {
-            transform: scale(1.1);
+        .social-links a:hover {
+            color: #CFAE3D;
+            transform: scale(1.05);
         }
+
     </style>
 </head>
 <body>
@@ -106,9 +110,9 @@
                 </ul>
                 <div class="idiomas">
                     <select id="lang-switcher" onchange="mudarIdioma(this.value)">
-                        <option value="../pt/contactos.html" selected>PT</option>
-                        <option value="../en/contactos.html">EN</option>
-                        <option value="../de/contactos.html">DE</option>
+                        <option value="contactos.html" selected>PT</option>
+                        <option value="contactos.html">EN</option>
+                        <option value="contactos.html">DE</option>
                     </select>
                 </div>
             </div>
@@ -118,40 +122,36 @@
     <!-- Conteúdo principal -->
     <main>
         <!-- Formulário -->
-       <div class="form-container">
-    <h1>Contacte-me</h1>
-    <form action="#" method="post">
-        <div class="form-group">
-            <label for="nome">Nome</label>
-            <input type="text" id="nome" name="nome" placeholder="Seu nome" required>
+        <div class="form-container">
+            <h1>Contacte-me</h1>
+            <form action="#" method="post">
+                <div class="form-group">
+                    <label for="nome">Nome</label>
+                    <input type="text" id="nome" name="nome" placeholder="Seu nome" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">E-mail</label>
+                    <input type="email" id="email" name="email" placeholder="Seu e-mail" required>
+                </div>
+                <div class="form-group">
+                    <label for="assunto">Assunto</label>
+                    <input type="text" id="assunto" name="assunto" placeholder="Assunto da mensagem" required>
+                </div>
+                <div class="form-group">
+                    <label for="mensagem">Mensagem</label>
+                    <textarea id="mensagem" name="mensagem" placeholder="Escreva sua mensagem..." required></textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit">Enviar</button>
+                </div>
+            </form>
         </div>
-        <div class="form-group">
-            <label for="email">E-mail</label>
-            <input type="email" id="email" name="email" placeholder="Seu e-mail" required>
+
+        <!-- Links sociais -->
+        <div class="social-links">
+            <a href="https://www.meloteca.com/portfolio-item/nuno-mimoso/" target="_blank" title="Meloteca">Meloteca</a>
+            <a href="https://www.facebook.com/nuno.mimoso.10" target="_blank" title="Facebook">Facebook</a>
         </div>
-        <div class="form-group">
-            <label for="assunto">Assunto</label>
-            <input type="text" id="assunto" name="assunto" placeholder="Assunto da mensagem" required>
-        </div>
-        <div class="form-group">
-            <label for="mensagem">Mensagem</label>
-            <textarea id="mensagem" name="mensagem" placeholder="Escreva sua mensagem..." required></textarea>
-        </div>
-        <div class="form-group">
-            <button type="submit">Enviar</button>
-        </div>
-    </form>
-</div>
-
-
-       <!-- Links sociais -->
-<div class="social-links">
-    <a href="https://www.meloteca.com/portfolio-item/nuno-mimoso/" target="_blank" title="Meloteca">Meloteca</a>
-    <a href="https://www.facebook.com/nuno.mimoso.10" target="_blank" title="Facebook">Facebook</a>
-</div>
-
-
-
     </main>
 
     <!-- Footer -->
