--- a/servicos.html
+++ b/servicos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serviços | Nuno Mimoso</title>
-    <link rel="stylesheet" href="../style.css">
-    <script src="../script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <style>
         main {
             padding: 120px 10% 60px; /* espaço para a navbar */
@@ -86,9 +86,9 @@
                 </ul>
                 <div class="idiomas">
                     <select id="lang-switcher" onchange="mudarIdioma(this.value)">
-                        <option value="../pt/servicos.html" selected>PT</option>
-                        <option value="../en/servicos.html">EN</option>
-                        <option value="../de/servicos.html">DE</option>
+                        <option value="servicos.html" selected>PT</option>
+                        <option value="servicos.html">EN</option>
+                        <option value="servicos.html">DE</option>
                     </select>
                 </div>
             </div>
@@ -100,7 +100,7 @@
         <!-- Linha 1 -->
         <div class="linha-servico">
             <div class="col-esquerda">
-                <img src="../img/servico1.jpg" alt="Direcção Artística">
+                <img src="img/servico1.jpg" alt="Direcção Artística">
             </div>
             <div class="col-direita">
                 <h1>Direcção Artística</h1>
@@ -114,7 +114,7 @@
         <!-- Linha 2 (ordem invertida) -->
         <div class="linha-servico">
             <div class="col-esquerda">
-                <img src="../img/servico2.jpg" alt="Musicologia / Organologia">
+                <img src="img/servico2.jpg" alt="Musicologia / Organologia">
             </div>
             <div class="col-direita">
                 <h1>Musicologia / Organologia</h1>
@@ -128,7 +128,7 @@
         <!-- Linha 3 -->
         <div class="linha-servico">
             <div class="col-esquerda">
-                <img src="../img/servico3.jpg" alt="Pedagogia Musical / Música Sacra">
+                <img src="img/servico3.jpg" alt="Pedagogia Musical / Música Sacra">
             </div>
             <div class="col-direita">
                 <h1>Pedagogia Musical / Música Sacra</h1>
