--- a/contactos.html
+++ b/contactos.html
@@ -102,11 +102,12 @@
             <a href="index.html" class="logo">Nuno Mimoso</a>
             <div class="menu-direita">
                 <ul>
-                    <li><a href="apresentacao.html">Apresentação</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="agenda.html">Agenda</a></li>
-                    <li><a href="partilhas.html">Partilhas</a></li>
-                    <li><a href="contactos.html" class="active">Contactos</a></li>
+                    <li><a href="apresentacao.html" class="active">APRESENTAÇÃO</a></li>
+<li><a href="servicos.html">SERVIÇOS</a></li>
+<li><a href="agenda.html">AGENDA</a></li>
+<li><a href="partilhas.html">PARTILHAS</a></li>
+<li><a href="contactos.html">CONTACTOS</a></li>
+
                 </ul>
                 <div class="idiomas">
                     <select id="lang-switcher" onchange="mudarIdioma(this.value)">
@@ -127,19 +128,19 @@
             <form action="#" method="post">
                 <div class="form-group">
                     <label for="nome">Nome</label>
-                    <input type="text" id="nome" name="nome" placeholder="Seu nome" required>
+                    <input type="text" id="nome" name="nome" placeholder="" required>
                 </div>
                 <div class="form-group">
                     <label for="email">E-mail</label>
-                    <input type="email" id="email" name="email" placeholder="Seu e-mail" required>
+                    <input type="email" id="email" name="email" placeholder="" required>
                 </div>
                 <div class="form-group">
                     <label for="assunto">Assunto</label>
-                    <input type="text" id="assunto" name="assunto" placeholder="Assunto da mensagem" required>
+                    <input type="text" id="assunto" name="assunto" placeholder="" required>
                 </div>
                 <div class="form-group">
                     <label for="mensagem">Mensagem</label>
-                    <textarea id="mensagem" name="mensagem" placeholder="Escreva sua mensagem..." required></textarea>
+                    <textarea id="mensagem" name="mensagem" placeholder="" required></textarea>
                 </div>
                 <div class="form-group">
                     <button type="submit">Enviar</button>
