--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
 <!-- Navbar -->
 <header>
     <nav class="menu">
-        <a href="index.html" class="logo">Nuno Mimoso</a>
+        <a href="index.html" class="logo">LOGO</a>
         <div class="menu-direita">
             <ul>
-                <li><a href="apresentacao.html">Apresentação</a></li>
-                <li><a href="servicos.html">Serviços</a></li>
-                <li><a href="agenda.html">Agenda</a></li>
-                <li><a href="partilhas.html">Partilhas</a></li>
-                <li><a href="contactos.html">Contactos</a></li>
+                <li><a href="apresentacao.html">BIOGRAFIA</a></li>
+                <li><a href="servicos.html">SERVIÇOS</a></li>
+                <li><a href="agenda.html">AGENDA</a></li>
+                <li><a href="partilhas.html">PARTILHAS</a></li>
+                <li><a href="contactos.html">CONTACTOS</a></li>
             </ul>
             <div class="idiomas">
                 <select id="lang-switcher" onchange="mudarIdioma(this.value)">
@@ -175,12 +175,14 @@
 <!-- Hero / Carousel -->
 <section class="hero">
     <div class="carousel-slide active" style="background-image: url('img/slide1.jpg');"></div>
-    <div class="carousel-slide" style="background-image: url('img/slide2.jpg');"></div>
     <div class="carousel-slide" style="background-image: url('img/slide3.jpg');"></div>
 
     <div class="hero-text">
-        <h1>Nuno Mimoso</h1>
-        <p>Director artístico · Organista · Musicólogo</p>
+        <h1 class="titulo-clasico">NUNO MIMOSO</h1>
+
+        <p style="text-transform: lowercase; font-style: italic;">
+        Director artístico · Organista · Musicólogo
+        </p>
     </div>
 </section>
 
