--- a/servicos.html
+++ b/servicos.html
@@ -78,11 +78,12 @@
             <a href="index.html" class="logo">Nuno Mimoso</a>
             <div class="menu-direita">
                 <ul>
-                    <li><a href="apresentacao.html">Apresentação</a></li>
-                    <li><a href="servicos.html" class="active">Serviços</a></li>
-                    <li><a href="agenda.html">Agenda</a></li>
-                    <li><a href="partilhas.html">Partilhas</a></li>
-                    <li><a href="contactos.html">Contactos</a></li>
+                   <li><a href="apresentacao.html" class="active">APRESENTAÇÃO</a></li>
+<li><a href="servicos.html">SERVIÇOS</a></li>
+<li><a href="agenda.html">AGENDA</a></li>
+<li><a href="partilhas.html">PARTILHAS</a></li>
+<li><a href="contactos.html">CONTACTOS</a></li>
+
                 </ul>
                 <div class="idiomas">
                     <select id="lang-switcher" onchange="mudarIdioma(this.value)">
