--- a/index.html
+++ b/index.html
@@ -175,10 +175,11 @@
 <!-- Hero / Carousel -->
 <section class="hero">
     <div class="carousel-slide active" style="background-image: url('img/slide1.jpg');"></div>
+    <div class="carousel-slide" style="background-image: url('img/slide2.jpg');"></div>
     <div class="carousel-slide" style="background-image: url('img/slide3.jpg');"></div>
 
     <div class="hero-text">
-        <h1 class="titulo-clasico">NUNO MIMOSO</h1>
+<h1 class="titulo-clasico"><big><big>N</big></big>UNO <big><big>M</big></big>IMOSO</h1>
 
         <p style="text-transform: lowercase; font-style: italic;">
         Director artístico · Organista · Musicólogo
