--- a/contactos.html
+++ b/contactos.html
@@ -99,10 +99,10 @@
     <!-- Navbar -->
     <header>
         <nav class="menu">
-            <a href="index.html" class="logo">Nuno Mimoso</a>
+            <a href="index.html" class="logo">LOGO</a>
             <div class="menu-direita">
                 <ul>
-                    <li><a href="apresentacao.html" class="active">APRESENTAÇÃO</a></li>
+                    <li><a href="apresentacao.html" class="active">BIOGRAFIA</a></li>
 <li><a href="servicos.html">SERVIÇOS</a></li>
 <li><a href="agenda.html">AGENDA</a></li>
 <li><a href="partilhas.html">PARTILHAS</a></li>
