Atualiza serviços com listas HTML

--- a/biografia.html
+++ b/biografia.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Apresentação | Nuno Mimoso</title>
+<title>Biografia | Nuno Mimoso</title>
 
 <!-- link para o CSS global (certifica-te que style.css está na MESMA PASTA que este HTML) -->
 <link rel="stylesheet" href="style.css">
