--- a/contactos.html
+++ b/contactos.html
@@ -102,7 +102,7 @@
             <a href="index.html" class="logo">LOGO</a>
             <div class="menu-direita">
                 <ul>
-                    <li><a href="apresentacao.html" class="active">BIOGRAFIA</a></li>
+                <li><a href="biografia.html">BIOGRAFIA</a></li>
 <li><a href="servicos.html">SERVIÇOS</a></li>
 <li><a href="agenda.html">AGENDA</a></li>
 <li><a href="partilhas.html">PARTILHAS</a></li>
