--- a/agenda.html
+++ b/agenda.html
@@ -27,7 +27,7 @@
         <a href="index.html" class="logo">LOGO</a>
         <div class="menu-direita">
             <ul>
-                <li><a href="apresentacao.html">BIOGRAFIA</a></li>
+                <li><a href="biografia.html">BIOGRAFIA</a></li>
                 <li><a href="servicos.html">SERVIÇOS</a></li>
                 <li><a href="agenda.html" class="active">AGENDA</a></li>
                 <li><a href="partilhas.html">PARTILHAS</a></li>
