--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Nuno Mimoso</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
     <style>
         /* Hero full-screen carousel */
         .hero {
@@ -155,7 +157,7 @@
         <a href="index.html" class="logo">LOGO</a>
         <div class="menu-direita">
             <ul>
-                <li><a href="apresentacao.html">BIOGRAFIA</a></li>
+                <li><a href="biografia.html">BIOGRAFIA</a></li>
                 <li><a href="servicos.html">SERVIÇOS</a></li>
                 <li><a href="agenda.html">AGENDA</a></li>
                 <li><a href="partilhas.html">PARTILHAS</a></li>
@@ -204,7 +206,7 @@ function nextSlide() {
     current = (current + 1) % slides.length;
     slides[current].classList.add('active');
 }
-setInterval(nextSlide, 5000);
+setInterval(nextSlide, 8000);
 </script>
 </body>
 </html>
