--- a/partilhas.html
+++ b/partilhas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agenda | Nuno Mimoso</title>
+    <title>Partilhas | Nuno Mimoso</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <style>
@@ -27,7 +27,7 @@
         <a href="index.html" class="logo">LOGO</a>
         <div class="menu-direita">
             <ul>
-                <li><a href="apresentacao.html">BIOGRAFIA</a></li>
+                <li><a href="biografia.html">BIOGRAFIA</a></li>
                 <li><a href="servicos.html">SERVIÇOS</a></li>
                 <li><a href="agenda.html" class="active">AGENDA</a></li>
                 <li><a href="partilhas.html">PARTILHAS</a></li>
