--- a/index.html
+++ b/index.html
@@ -154,12 +154,13 @@
 <!-- Navbar -->
 <header>
     <nav class="menu">
-        <a href="index.html" class="logo">LOGO</a>
+        <a href="index.html" class="logo"></a>
         <div class="menu-direita">
             <ul>
                 <li><a href="biografia.html">BIOGRAFIA</a></li>
                 <li><a href="servicos.html">SERVIÇOS</a></li>
-                <li><a href="agenda.html">AGENDA</a></li>
+                <li><a href="gesangstimmbildung.html" class="active">GESANG & STIMMBILDUNG </a></li>
+                <li><a href="agenda.html" class="active">AGENDA</a></li>
                 <li><a href="partilhas.html">PARTILHAS</a></li>
                 <li><a href="contactos.html">CONTACTOS</a></li>
             </ul>
