--- a/biografia.html
+++ b/biografia.html
@@ -9,9 +9,8 @@
 <link rel="stylesheet" href="style.css">
 <script src="script.js" defer></script>
 
-<!-- apenas estilos específicos desta página (NÃO tocar na navbar aqui) -->
 <style>
-  /* estilos específicos: hero-banner e texto (não mexer na navbar) */
+  /* estilos específicos: hero-banner e texto  */
   .hero-banner {
     width: 100%;
     height: 550px;
