--- a/gesangstimmbildung.html
+++ b/gesangstimmbildung.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Partilhas | Nuno Mimoso</title>
+    <title>G & S | Nuno Mimoso</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <style>
@@ -27,9 +27,9 @@
             color: #002147;
         }
 
-        .texto-apresentacao h1 { font-size: 2.5rem; margin-bottom: 10px; }
-        .texto-apresentacao h2 { font-size: 1.5rem; color: #CFAE3D; margin-bottom: 20px; }
-        .texto-apresentacao p { line-height: 1.6; margin-bottom: 15px; }
+        .texto-apresentacao h1 { font-size: 2.5rem; margin-bottom: 15px; }
+        .texto-apresentacao h2 { font-size: 1.5rem; color: #CFAE3D; margin-bottom: 30px; }
+        .texto-apresentacao p { line-height: 1.6; margin-bottom: 20px; }
 
         /* Estilo para o primeiro parágrafo alinhado à esquerda */
         .primeiro-paragrafo {
