--- a/servicos.html
+++ b/servicos.html
@@ -88,9 +88,9 @@
 
     <p style="text-align: justify;">órgãos históricos de Portugal</p>
     <p style="text-align: justify;">acompanhamento e fiscalização</p>
-    <p style="text-align: justify;">projecto de restauro e inauguração</p>
-    <p style="text-align: justify; color: red;">Ligação para Inventário</p>
-    
+    <p style="text-align: justify;">projecto de restauro e inauguração</p>   
+        <p style="text-align: justify;">Inventário do Património Organístico Português</p>   
+
 
 
     
@@ -103,7 +103,7 @@
 
 </main>
 
-<!-- Footer (idêntico ao index) -->
+<!-- Footer  -->
 <footer>
   <div class="links">
     <a href="#">Política de Privacidade</a> |
