--- a/actividades.html
+++ b/actividades.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Partilhas | Nuno Mimoso</title>
+    <title>Actividades | Nuno Mimoso</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <style>
@@ -27,13 +27,13 @@
         <a href="index.html" class="logo"></a>
         <div class="menu-direita">
             <ul>
-          <li><a href="biografia.html">BIOGRAFIA</a></li>
-          <li><a href="servicos.html">SERVIÇOS</a></li>
-          <li><a href="gesangstimmbildung.html" class="active">GESANG & STIMMBILDUNG </a></li>
-          <li><a href="agenda.html" class="active">AGENDA</a></li>
-          <li><a href="partilhas.html">PARTILHAS</a></li>
-          <li><a href="contactos.html">CONTACTOS</a></li>
-      </ul>
+                <li><a href="biografia.html">BIOGRAFIA</a></li>
+                <li><a href="dominios.html">DOMÍNIOS</a></li>
+                <!-- <li><a href="gesangstimmbildung.html" class="active">GESANG & STIMMBILDUNG </a></li> -->
+                <li><a href="actividades.html" class="active">ACTIVIDADES</a></li>
+                <li><a href="puplicacoes.html">PUBLICAÇÕES</a></li>
+                <li><a href="contactos.html">CONTACTOS</a></li>
+            </ul>
             <div class="idiomas">
                 <select id="lang-switcher" onchange="mudarIdioma(this.value)">
                     <option value="agenda.html" selected>PT</option>
