--- a/biografia.html
+++ b/biografia.html
@@ -49,13 +49,13 @@
     <a href="index.html" class="logo"></a>
     <div class="menu-direita">
       <ul>
-          <li><a href="biografia.html">BIOGRAFIA</a></li>
-          <li><a href="servicos.html">SERVIÇOS</a></li>
-          <li><a href="gesangstimmbildung.html" class="active">GESANG & STIMMBILDUNG </a></li>
-          <li><a href="agenda.html" class="active">AGENDA</a></li>
-          <li><a href="partilhas.html">PARTILHAS</a></li>
-          <li><a href="contactos.html">CONTACTOS</a></li>
-      </ul>
+                <li><a href="biografia.html">BIOGRAFIA</a></li>
+                <li><a href="dominios.html">DOMÍNIOS</a></li>
+                <!-- <li><a href="gesangstimmbildung.html" class="active">GESANG & STIMMBILDUNG </a></li> -->
+                <li><a href="actividades.html" class="active">ACTIVIDADES</a></li>
+                <li><a href="puplicacoes.html">PUBLICAÇÕES</a></li>
+                <li><a href="contactos.html">CONTACTOS</a></li>
+            </ul>
       <div class="idiomas">
         <select id="lang-switcher" onchange="mudarIdioma(this.value)">
           <option value="apresentacao.html" selected>PT</option>
