--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuno Mimoso</title>
+    <title>Home | Nuno Mimoso</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
@@ -158,10 +158,10 @@
         <div class="menu-direita">
             <ul>
                 <li><a href="biografia.html">BIOGRAFIA</a></li>
-                <li><a href="servicos.html">SERVIÇOS</a></li>
-                <li><a href="gesangstimmbildung.html" class="active">GESANG & STIMMBILDUNG </a></li>
-                <li><a href="agenda.html" class="active">AGENDA</a></li>
-                <li><a href="partilhas.html">PARTILHAS</a></li>
+                <li><a href="dominios.html">DOMÍNIOS</a></li>
+                <!-- <li><a href="gesangstimmbildung.html" class="active">GESANG & STIMMBILDUNG </a></li> -->
+                <li><a href="actividades.html" class="active">ACTIVIDADES</a></li>
+                <li><a href="puplicacoes.html">PUBLICAÇÕES</a></li>
                 <li><a href="contactos.html">CONTACTOS</a></li>
             </ul>
             <div class="idiomas">
@@ -184,9 +184,11 @@
     <div class="hero-text">
 <h1 class="titulo-clasico"><big><big>N</big></big>UNO <big><big>M</big></big>IMOSO</h1>
 
-        <p style="text-transform: lowercase; font-style: italic;">
+        <!-- <p style="text-transform: lowercase; font-style: italic;">
         Director artístico · Organista · Musicólogo
-        </p>
+        </p> -->
+
+<p style="text-transform: lowercase; font-style: italic; white-space: nowrap;">música sacra. pedagogia musical. musicologia. direcção artística</p>        
     </div>
 </section>
 
