Correções de idiomas e link livro

--- a/publicacoes-de.html
+++ b/publicacoes-de.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tätigkeiten | Nuno Mimoso</title>
+    <title>Beiträge | Nuno Mimoso</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <style>
-        /* Corpo da página Actividades */
         main {
             min-height: 80vh;
             display: flex;
@@ -21,7 +20,6 @@
 </head>
 <body>
 
-<!-- Navbar -->
 <header>
     <nav class="menu">
         <a href="index-de.html" class="logo"></a>
@@ -44,12 +42,10 @@
     </nav>
 </header>
 
-<!-- Conteúdo principal -->
 <main>
     <p><em>In Bearbeitung...</em></p>
 </main>
 
-<!-- Footer -->
 <footer>
     <div class="links">
         <a href="#">Datenschutz</a> | 
@@ -64,16 +60,16 @@ function mudarIdioma(idioma) {
     let novaPagina = '';
     
     const mapeamento = {
-        'actividades.html': {'pt': 'actividades.html', 'de': 'actividades-de.html'},
-        'actividades-de.html': {'pt': 'actividades.html', 'de': 'actividades-de.html'},
+        'publicacoes.html': {'pt': 'publicacoes.html', 'de': 'publicacoes-de.html'},
+        'publicacoes-de.html': {'pt': 'publicacoes.html', 'de': 'publicacoes-de.html'},
         'index.html': {'pt': 'index.html', 'de': 'index-de.html'},
         'index-de.html': {'pt': 'index.html', 'de': 'index-de.html'},
         'biografia.html': {'pt': 'biografia.html', 'de': 'biografia-de.html'},
         'biografia-de.html': {'pt': 'biografia.html', 'de': 'biografia-de.html'},
         'dominios.html': {'pt': 'dominios.html', 'de': 'dominios-de.html'},
         'dominios-de.html': {'pt': 'dominios.html', 'de': 'dominios-de.html'},
-        'publicacoes.html': {'pt': 'publicacoes.html', 'de': 'publicacoes-de.html'},
-        'publicacoes-de.html': {'pt': 'publicacoes.html', 'de': 'publicacoes-de.html'},
+        'actividades.html': {'pt': 'actividades.html', 'de': 'actividades-de.html'},
+        'actividades-de.html': {'pt': 'actividades.html', 'de': 'actividades-de.html'},
         'contactos.html': {'pt': 'contactos.html', 'de': 'contactos-de.html'},
         'contactos-de.html': {'pt': 'contactos.html', 'de': 'contactos-de.html'}
     };
