--- a/index-de.html
+++ b/index-de.html
@@ -1,33 +1,18 @@
 <!DOCTYPE html>
-<html lang="de">  <!-- ÚNICA mudança aqui -->
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Startseite | Nuno Mimoso</title>  <!-- Mudança no título -->
+    <title>Home | Nuno Mimoso</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-
-    <!-- MANTENHA TODO O SEU CSS ORIGINAL AQUI -->
-    <style>
-        /* TODO O SEU CSS ATUAL - NÃO MUDE NADA */
-        .hero {
-            position: relative;
-            width: 100%;
-            height: 100vh;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            text-align: center;
-        }
-        /* ... TODO O RESTO DO SEU CSS ... */
-    </style>
+    
+    <!-- REMOVA TODO O BLOCO <style> DAQUI -->
 </head>
 <body>
 
-<!-- Navbar - APENAS mude os textos e links -->
+<!-- O RESTO DO SEU HTML PERMANECE IGUAL -->
 <header>
     <nav class="menu">
         <a href="index-de.html" class="logo"></a>  
@@ -43,7 +28,7 @@
             <div class="idiomas">
                 <select id="lang-switcher" onchange="mudarPaginaIdioma(this.value)">
                     <option value="pt">PT</option>
-                    <option value="de" selected>DE</option>  <!-- DE selecionado -->
+                    <option value="de" selected>DE</option>
                 </select>
             </div>
         </div>
@@ -52,27 +37,25 @@
 
 <section class="hero">
     <div class="carousel-slide active" style="background-image: url('./img/slide1.jpg');"></div>
-<div class="carousel-slide" style="background-image: url('./img/slide2.jpg');"></div>
-<div class="carousel-slide" style="background-image: url('./img/slide3.jpg');"></div>
+    <div class="carousel-slide" style="background-image: url('./img/slide2.jpg');"></div>
+    <div class="carousel-slide" style="background-image: url('./img/slide3.jpg');"></div>
 
     <div class="hero-text">
         <h1 class="titulo-clasico"><big><big>N</big></big>UNO <big><big>M</big></big>IMOSO</h1>
         <p style="text-transform: lowercase; font-style: italic; white-space: nowrap;">
-            Kirchenmusik · Musikpädagogik · Musikwissenschaft · Künstlerische Leitung  
+            Kirchenmusik · Musikwissenschaft · Künstlerische Leitung  
         </p>        
     </div>
 </section>
 
-<!-- Footer - APENAS mude os textos -->
 <footer>
     <div class="links">
-        <a href="#">Datenschutz</a> |   <!-- Texto alemão -->
-        <a href="#">Nutzungsbedingungen</a>  <!-- Texto alemão -->
+        <a href="#">Datenschutz</a> | 
+        <a href="#">Nutzungsbedingungen</a>
     </div>
     <p>&copy; 2025 Nuno Mimoso</p>
 </footer>
 
-<!-- MANTENHA TODO O JAVASCRIPT ORIGINAL -->
 <script>
 const slides = document.querySelectorAll('.carousel-slide');
 let current = 0;
@@ -92,7 +75,14 @@ function mudarPaginaIdioma(idioma) {
         'index-de.html': {'pt': 'index.html', 'de': 'index-de.html'},
         'biografia.html': {'pt': 'biografia.html', 'de': 'biografia-de.html'},
         'biografia-de.html': {'pt': 'biografia.html', 'de': 'biografia-de.html'},
-        // ... etc para todas as páginas
+        'dominios.html': {'pt': 'dominios.html', 'de': 'dominios-de.html'},
+        'dominios-de.html': {'pt': 'dominios.html', 'de': 'dominios-de.html'},
+        'actividades.html': {'pt': 'actividades.html', 'de': 'actividades-de.html'},
+        'actividades-de.html': {'pt': 'actividades.html', 'de': 'actividades-de.html'},
+        'publicacoes.html': {'pt': 'publicacoes.html', 'de': 'publicacoes-de.html'},
+        'publicacoes-de.html': {'pt': 'publicacoes.html', 'de': 'publicacoes-de.html'},
+        'contactos.html': {'pt': 'contactos.html', 'de': 'contactos-de.html'},
+        'contactos-de.html': {'pt': 'contactos.html', 'de': 'contactos-de.html'}
     };
     
     if (mapeamento[paginaAtual] && mapeamento[paginaAtual][idioma]) {
