--- a/contactos.html
+++ b/contactos.html
@@ -7,19 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <style>
-        .conteudo-principal {
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 120px 20px 80px;
-        }
-
-        .titulo-seccao {
+        main {
+            min-height: 100vh;
+            padding: 120px 10% 60px;
             font-family: 'Playfair Display', serif;
-            font-size: 2.5rem;
-            font-weight: bold;
-            color: #002147;
-            margin-bottom: 40px;
-            text-align: left;
+            background: #f9f9f9;
+            display: flex;
+            flex-direction: column;
+            gap: 60px;
         }
 
         .form-container {
@@ -28,7 +23,12 @@
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
             max-width: 600px;
-            margin: 0 auto 60px auto;
+            margin: 0 auto;
+        }
+
+        .form-container h1 {
+            margin-bottom: 20px;
+            color: #002147;
         }
 
         .form-group {
@@ -115,9 +115,7 @@
         </nav>
     </header>
 
-    <main class="conteudo-principal">
-        <h1 class="titulo-seccao">CONTACTOS</h1>
-
+    <main>
         <div class="form-container">
             <form action="#" method="post">
                 <div class="form-group">
